--- a/renderer.css
+++ b/renderer.css
@@ -1,5 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+  color: white;
 }
 
 h1 {
@@ -34,7 +36,6 @@ section {
   height: 140px;
   margin: 2px;
   text-align: center;
-  color: white;
 }
 
 .positive {
