--- a/renderer.css
+++ b/renderer.css
@@ -1,7 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: black;
-  color: white;
+  background-color: beige;
 }
 
 h1 {
@@ -36,6 +35,7 @@ section {
   height: 140px;
   margin: 2px;
   text-align: center;
+  color: white;
 }
 
 .positive {
