--- a/renderer.css
+++ b/renderer.css
@@ -28,6 +28,10 @@ section {
   text-align: center;
 }
 
+#updatetime {
+  font-style: italic;
+}
+
 .stock {
   border: 1px solid black;
   display: inline-block;
